# CourseWork2018_2019

./: .gitignore  BasisDecompositionInterface.h  CMakeCache.txt  CMakeLists.txt  CrossFindingInterface.h  CrossFindingRealize.cpp  DisplayImage  DisplayImage.cpp  FocusFindingInterface.h  FocusFindingRealize.cpp  ImgManipInterface.h  ImgManipRealize.cpp  Makefile  README.md  Start.cpp  StructuresRealize.cpp  cmake_install.cmake  drawGraph.py  file.txt  interface.h  realize.cpp
Interface/: CrossFindingInterface.h  ImgManipInterface.h  StructuresInterface.h
Realization/: BasisDecompositionRealize.cpp  CrossFindingRealize.cpp  ImgManipRealize.cpp
